# AuraIME

./: .gitignore  .rustfmt.toml  Cargo.toml
src/: main.rs  monitor.rs
src/ime/: helpers.rs  mod.rs
src/monitor/: caret.rs  mod.rs
src/ui/: accent.rs  animation.rs  layout.rs  mod.rs  part.rs  renderer.rs  window.rs  window_helper.rs
src/ui/parts/: container.rs  mod.rs  part_trait.rs  render.rs  text_part.rs
