[package]
name = "AuraIME"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_TextServices",
    "Win32_UI_Input_Ime",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Controls",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Ole",
    "Win32_Globalization",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Foundation_Collections",
    "Foundation_Numerics",
] }
windows-numerics = "0.3.1"
#tokio = { version = "1", features = ["full"] }
#windows-core = { version = "0.62.2" }

